@@ -13,6 +13,8 @@
   <property name="src" value="${basedir}/src"/>
   <property name="classes" value="${basedir}/classes"/>
   <property name="lib" value="${basedir}/lib"/>
+  <property name="opt" value="${basedir}/opt"/>
+  <property name="opt_lib" value="${opt}/lib"/>
   <property name="temp" value="${basedir}/temp"/>
   <property name="test" value="${basedir}/test"/>
   <property name="web" value="${basedir}/web"/>  
@@ -28,6 +30,7 @@
   <property name="lib.joone" value="${lib}/joone-engine.jar"/>
   <property name="lib.jython" value="${lib}/jython.jar"/>
   <property name="lib.mysql" value="${lib}/mysql-connector-java-3.1.12-bin.jar"/>
+  <property name="lib.postgresql" value="${opt_lib}/postgresql.jar"/>
   <property name="lib.xml" value="${lib}/xstream-1.3.jar"/>
   <property name="lib.junit" value="${lib}/junit.jar"/>
   <property name="lib.uuid" value="${lib}/jug-lgpl-2.0.0.jar"/>
@@ -55,6 +58,7 @@
         <pathelement path="${src}"/>
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.mysql}"/>
+	<pathelement path="${lib.postgresql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.jython}"/>
         <pathelement path="${lib.xml}"/>
@@ -80,7 +84,7 @@
 	   destdir="${classes}"
 	   debug="on"
   	   optimize="on"
-	   source="1.4"
+	   source="1.6"
 	   includes="**/*.java"
            excludes="nz/org/venice/tools/*">
       <classpath>
@@ -88,6 +92,7 @@
         <pathelement path="${classes}"/>
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.mysql}"/>
+	<pathelement path="${lib.postgresql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.jython}"/>
         <pathelement path="${lib.xml}"/>
@@ -151,7 +156,7 @@
   </target>
   
   <!-- Generate docs -->
-  <target name="doc-generate" if="do-doc-generate">
+  <target name="doc-generate">
     <xmlcatalog id="document">
       <dtd publicID="-//Venice//DTD XML Document V1.0//EN"
            location="${doc}/document.dtd"/>
@@ -505,6 +510,7 @@
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.mysql}"/>
+	<pathelement path="${lib.postgresql}"/>
         <pathelement path="${lib.jython}"/>
         <pathelement path="${lib.xml}"/>	
 	<pathelement path="${lib.uuid}"/>
@@ -530,6 +536,7 @@
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.mysql}"/>
+	<pathelement path="${lib.postgresql}"/>
         <pathelement path="${lib.jython}"/>
         <pathelement path="${lib.xml}"/>	
 	<pathelement path="${lib.uuid}"/>
@@ -548,6 +555,7 @@
         <pathelement path="${lib.hsql}"/>
         <pathelement path="${lib.joone}"/>
         <pathelement path="${lib.mysql}"/>
+	<pathelement path="${lib.postgresql}"/>
         <pathelement path="${lib.jython}"/>
         <pathelement path="${lib.xml}"/>
 	<pathelement path="${lib.uuid}"/>
