@@ -46,10 +46,10 @@ in Venice. For charting see <link to="Graphs">Graphs</link>.
 </para>
 </help>
 
-<text>Merchant of Venice, 0.75 beta / 01/May/2012
+<text>Merchant of Venice, 0.752 beta / 26/Dec/2018
 ===========================================
 
-Copyright (C) 2003-12, Andrew Leppard (aleppard picknowl com au)
+Copyright (C) 2003-19, Andrew Leppard (aleppard picknowl com au)
 See COPYING.txt for license terms.
 
 </text>
