@@ -1,4 +1,4 @@
-Changes for Venice, 0.752 beta ??/??/????
+Changes for Venice, 0.753 beta ??/??/??
 =========================================
 * Change table state save/restore to avoid saving the entire table contents 
 * Improve alert triggered reporting dialog, allowing the user to go back and 
@@ -10,6 +10,13 @@ forward
 * Intraday charts
 
 % Preload data for most used symbols on cache refresh.
+
+Changes for Venice, 0.752 beta 26/December/2018
+===============================================
+* Added smooth option for RSI
+* Fixed SQL error on checking for triggered alerts when there no alerts
+* Minor interface improvements
+* Added quote access guards to avoid MissingQuoteException
 
 Changes for Venice, 0.751 beta 20/07/2012
 =========================================
